more i18n work, playing with a component approach, built SPA router from scratch, also still needs work

--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -1,5 +1,5 @@
 {
   "foo": "en here we are {name}",
   "placeholder": "en input placeholder",
-  "some ready long text like a paragraph for {name}, age: {age}": "some ready long text like a paragraph for {name}, age: {age}"
+  "some ready long text like a paragraph for": "some ready long text like a paragraph for {name}, age: {age}"
 }
